--- a/app/src/main/res/drawable/button_primary.xml
+++ b/app/src/main/res/drawable/button_primary.xml
@@ -2,9 +2,11 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <gradient
-        android:startColor="@color/colorPrimary"
+        android:angle="270"
         android:endColor="@color/colorPrimary"
-        android:angle="270" />
+        android:startColor="@color/colorPrimary" />
     <corners android:radius="3dp" />
-    <stroke android:width="2px" android:color="@color/colorPrimaryDark" />
+    <stroke
+        android:width="2px"
+        android:color="@color/colorPrimaryDark" />
 </shape>
