--- a/app/src/main/res/drawable/button_white.xml
+++ b/app/src/main/res/drawable/button_white.xml
@@ -2,9 +2,11 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <gradient
-        android:startColor="@color/colorBackground"
+        android:angle="270"
         android:endColor="@color/colorBackground"
-        android:angle="270" />
+        android:startColor="@color/colorBackground" />
     <corners android:radius="3dp" />
-    <stroke android:width="2px" android:color="@color/colorPrimaryDark" />
+    <stroke
+        android:width="2px"
+        android:color="@color/colorPrimaryDark" />
 </shape>
