--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,48 +8,22 @@
     android:layout_height="match_parent"
     tools:context="com.zic.installfaker.MainActivity">
 
-    <RelativeLayout
-        android:id="@+id/content_main"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:paddingBottom="@dimen/activity_vertical_margin"
-        android:paddingLeft="@dimen/activity_horizontal_margin"
-        android:paddingRight="@dimen/activity_horizontal_margin"
-        android:paddingTop="@dimen/activity_vertical_margin">
+        android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/infoTV"
+        <include
+            android:id="@+id/appbar"
+            layout="@layout/appbar"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:text="Zickie Loox"
-            android:textColor="@color/colorAccent"
-            android:textSize="30sp" />
+            android:layout_height="wrap_content" />
 
-        <Button
-            android:id="@+id/testBTN"
+        <android.support.v4.view.ViewPager
+            android:id="@+id/viewPager"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/infoTV"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="30dp"
-            android:background="@drawable/button_white"
-            android:text="@string/btn_test"
-            android:textColor="@color/colorPrimary"
-            android:textSize="25sp" />
-
-        <Button
-            android:id="@+id/historyBTN"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/testBTN"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="30dp"
-            android:background="@drawable/button_primary"
-            android:text="@string/activity_history_label"
-            android:textColor="?android:attr/colorBackground"
-            android:textSize="25sp" />
-    </RelativeLayout>
+            android:layout_height="wrap_content" />
+    </LinearLayout>
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
