--- a/app/src/main/res/layout/list_item_package.xml
+++ b/app/src/main/res/layout/list_item_package.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:descendantFocusability="blocksDescendants"
     android:orientation="horizontal">
 
@@ -12,11 +12,13 @@
         android:layout_weight="1"
         android:gravity="center_vertical"
         android:orientation="vertical"
+        android:paddingEnd="16dp"
         android:paddingLeft="10dp"
-        android:paddingRight="@dimen/activity_horizontal_margin">
+        android:paddingRight="@dimen/activity_vertical_margin"
+        android:paddingStart="10dp">
 
         <TextView
-            android:id="@+id/pkgNameItemTV"
+            android:id="@+id/pkgNameTV"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ellipsize="end"
@@ -26,7 +28,7 @@
             android:textSize="25sp" />
 
         <TextView
-            android:id="@+id/appNameItemTV"
+            android:id="@+id/appNameTV"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ellipsize="end"
@@ -35,10 +37,11 @@
             android:textSize="20sp" />
 
         <TextView
-            android:id="@+id/dateItemTV"
+            android:id="@+id/dayCounterTV"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
+            android:layout_marginStart="10dp"
             android:alpha="0.7"
             android:ellipsize="end"
             android:maxLines="1"
