--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,7 @@
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.zic.installfaker.MainActivity">
+    tools:context="com.zic.installfaker.activity.MainActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
