--- a/app/src/main/res/layout/dialog_add.xml
+++ b/app/src/main/res/layout/dialog_add.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="com.zic.installfaker.AddDialogFragment">
+    tools:context="com.zic.installfaker.dialog.AddDialogFragment">
 
     <android.support.design.widget.TextInputLayout
         android:id="@+id/pkgNameTIL"
